# rust-learn

./: .gitignore  README.md
.metadata/: version.ini
2020/guessing-game/: Cargo.toml
2020/hello-cargo/: Cargo.toml
2020/hello-world/: main.rs
2020/variables/: Cargo.toml
2021/av-in-rust/: .gitignore  Cargo.toml  ReadMe.md
2021/closure-test/: Cargo.toml
2021/control-flow-test/: Cargo.toml
2021/docker-image-reader/: Cargo.toml
2021/dynamic-library-test/: Cargo.toml
2021/functions/: Cargo.toml
2021/gg/: Cargo.toml
2021/guessing_game/: Cargo.toml
2021/law-wiki-captor/: Cargo.toml
2021/modbus-sample/: Cargo.toml  ReadMe.md
2021/mut-structure-test/: Cargo.toml
2021/ownership-test/: Cargo.toml
2021/rectangles/: Cargo.toml
2021/restaurant/: Cargo.toml
2021/tgrep/: Cargo.toml  a.txt
2021/variables/: Cargo.toml
2021/video-stream-transfer/: Cargo.toml  ReadMe.md  build.sh  env.sh
2021/windows-api-test/: Cargo.toml
2021/windows-api-test/src/: main.rs
controls/: Cargo.toml
crate-and-mod/: Cargo.toml
enums/: Cargo.toml
fibonacci/: Cargo.toml
file-test/: .project  Cargo.toml
functions/: Cargo.toml
generic-test/: Cargo.toml
get-struct-field/: Cargo.toml
guess-number/: Cargo.toml
hashmap-test/: Cargo.toml
hello-cargo/: Cargo.toml
hello-world/: Cargo.toml
lifetime-tests/: .project  Cargo.toml
match-test/: Cargo.toml
ownership/: Cargo.toml
panic-test/: Cargo.toml
result-test/: Cargo.toml
slices/: Cargo.toml
string-tests/: Cargo.toml
structs/: Cargo.toml
variables/: Cargo.toml
vector-test/: Cargo.toml
(+55 files in other folders)
