[package]
name = "windows-api-test"
version = "0.1.0"
authors = ["QidongTan <QidongTan@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.windows]
git = "https://github.com/microsoft/windows-rs"
features = [
    "UI",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Services",
    "Win32_UI_Shell",
    "UI_Composition_Desktop",
    "UI_Core",
    "UI_Core_Preview",
]